--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Map/TESTMap.TESTMap
 EditorStartupMap=/Game/Map/TESTMap.TESTMap
+GlobalDefaultGameMode=/Game/Blueprints/BP_FPSGameModeBase.BP_FPSGameModeBase_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
