--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/TESTMap.TESTMap
-EditorStartupMap=/Game/Map/TESTMap.TESTMap
-GlobalDefaultGameMode=/Game/UI/MainMenu.MainMenu_C
+GameDefaultMap=/Game/Map/Debuging.Debuging
+EditorStartupMap=/Game/Map/Debuging.Debuging
+GlobalDefaultGameMode=/Game/Blueprints/BP_FPSGameModeBase.BP_FPSGameModeBase_C
+bUseSplitscreen=False
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
